--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/styles": "^4.10.0",
+    "core-js": "^2.6.11",
     "gatsby": "^2.24.79",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-offline": "^3.2.33",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.42",
-    "gatsby-source-filesystem": "^2.3.34",
+    "gatsby-source-filesystem": "^2.3.35",
+    "gatsby-source-plone": "^0.2.0",
     "gatsby-transformer-sharp": "^2.5.17",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
